test/fixtures/ingress.json
{"dev": "null"}
{"dev": "null"}
{"type":"ADDED",  "object":{    "kind":"X-Ingress",    "apiVersion":"v1","metadata":{"name":"kubernetes","namespace":"default","selfLink":"/api/v1/namespaces/default/services/kubernetes","uid":"7afd1476-42e7-11e6-abe8-080027e0e22c","resourceVersion":"12","creationTimestamp":"2016-07-05T19:34:24Z","labels":{"component":"apiserver","provider":"kubernetes"}},"spec":{"ports":[{"name":"https","protocol":"TCP","port":443,"targetPort":443}],"clusterIP":"10.254.0.1","type":"ClusterIP","sessionAffinity": [...]
{"type":"DELETED",  "object":  {    "kind":"X-Ingress","apiVersion":"v1","metadata":      {"name":"kubernetes","namespace":"default","selfLink":"/api/v1/namespaces/default/services/kubernetes","uid":"7afd1476-42e7-11e6-abe8-080027e0e22c","resourceVersion":"12","creationTimestamp":"2016-07-05T19:34:24Z","labels":{"component":"apiserver","provider":"kubernetes"}},"spec":{"ports":[{"name":"https","protocol":"TCP","port":443,"targetPort":443}],"clusterIP":"10.254.0.1","type":"ClusterIP","sessionAffi [...]
{"dev": "null-ingress"}
