test/fixtures/pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: feature-xyz
spec:
  containers:
  - name: app1-unicorn
    image: mock-repo/app1:tagged-build-of-feature-xyz
    ports:
    - containerPort: 3000
    env:
    - name: RAILS_ENV
      value: staging
    command:
    - bundle
    - exec
    - unicorn
    - "-c"
    - config/unicorn.rb
  imagePullSecrets:
  - name: dockercfgjson
status:
  podIP: 256.0.0.1
