test/fixtures/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: feature-xyz-app1-unicorn
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
  selector:
    name: feature-xyz
